# BaseGuiApplication

./: README.md  meson.build
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  config.h
builddir/.cache/clangd/index/: config.h.8CEDB397B12CADBE.idx
builddir/data/: app-resources.c  app-resources.h  org.robertomorrison.test_app.appdata.xml  org.robertomorrison.test_app.appdata.xml.in  org.robertomorrison.test_app.desktop.in  org.robertomorrison.test_app.gresource.xml  org.robertomorrison.test_app.gschema.xml
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: install-log.txt  meson-log.txt
builddir/meson-private/: coredata.dat.prev
builddir/src/: test_app
data/: meson.build  org.robertomorrison.test_app.desktop.in  org.robertomorrison.test_app.gresource.xml.in  org.robertomorrison.test_app.gschema.xml.in
data/ui/: lol_window.ui
src/: lol_application.c  lol_application.h  lol_window.c  lol_window.h  main.c  meson.build
